added git contribute link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@ Place this code directly before your closing body tag:
 
 <h3>Background</h3>	
 <h5>During the debate surrounding SOPA, one of the most important and effective forms of protest was the demonstrative censoring of sites we know and love. Brave sites taking a stand for the way the internet was envisioned and should remain helped communicate to regular users and regulators alike that the internet and user privacy are universal freedoms. Show this button as a reminder that sharing should be a choice.</h5>
+
+<h3>Contribute</h3>
+<h5>This project is open source and will be as effective as we make it. Please feel free to contribute and send me a pull request. <a href="https://github.com/zackliscio/prismbutton" target="_blank">Prismbutton on Git.</a></h5>
+
 </div>
 <script type="text/javascript" src="prismbutton.js"></script>
 </body>
