type on index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <h1>Prism Button v0.01</h1>
 
 <h3>Use</h3>
-<h5>Add this to you site with a single line of javascript.</h5>
+<h5>Add this to your site with a single line of javascript.</h5>
 
 Place this code directly before your closing body tag:
 <script src="https://gist.github.com/zackliscio/5846624.js"></script>
